Local setup changes / docs

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
-APP_URL=www.familycodex.dev
+APP_TLD=dev
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=%s
+DB_DATABASE=%s
+DB_USERNAME=%s
+DB_PASSWORD=%s
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
