--- a/data/people/harold-wood-poole.yaml
+++ b/data/people/harold-wood-poole.yaml
@@ -1,4 +1,4 @@
-full_name: Harold Wood Pooele
+full_name: Harold Wood Poole
 birth_date: 20 December 1918
 death_date: 8 March 2010
 links:
@@ -34,8 +34,8 @@ videos:
   height: 315
 documents:
 - title: Story of P.O.W. Experience
-  url: /media/harold-wood-pooele/documents/harold-pooele-pow-story.pdf
+  url: /media/harold-wood-poole/documents/harold-poole-pow-story.pdf
 - title: First Letters Home After the War
-  url: /media/harold-wood-pooele/documents/harold-pooele-first-post-war-letters-home.pdf
+  url: /media/harold-wood-poole/documents/harold-poole-first-post-war-letters-home.pdf
 - title: "Former U.S. World War II POW'S: A Struggle For Justice"
-  url: /media/harold-wood-pooele/documents/former-us-world-war-ii-pows-a-struggle-for-justice.pdf
+  url: /media/harold-wood-poole/documents/former-us-world-war-ii-pows-a-struggle-for-justice.pdf
