--- a/data/family/harold-wood-poole-and-kathleen-lucile-jowers.yaml
+++ b/data/family/harold-wood-poole-and-kathleen-lucile-jowers.yaml
@@ -1,6 +1,6 @@
-name: Harold Wood Poole
-url: harold-wood-poole.html
-photo_url: /media/harold-wood-poole/photos/main.jpg
+name: Harold Wood Poole and Kathleen Lucile Jowers
+url: harold-wood-poole-and-kathleen-lucile-jowers.html
+photo_url: /media/harold-wood-poole-and-kathleen-lucile-jowers/photos/main.jpg
 photo_width: 400
 
 people:
@@ -28,6 +28,14 @@ people:
         url: https://smile.amazon.com/The-Inheritance-Of-War-DVD/dp/B006OIHPRI?sa-no-redirect=1
       - title: Link to buy Soldier Slaves on Amazon
         url: https://smile.amazon.com/Soldier-Slaves-Abandoned-Courts-Congress/dp/1591142040/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1527543918&sr=1-1
+  - full_name: Kathleen Lucile Jowers
+    birth_date: 26 July 1927
+    death_date: 11 May 1978
+    links:
+      - title: familysearch.org
+        url: https://www.familysearch.org/tree/person/details/KWCY-TGG
+      - title: ancestry.com
+        url: https://www.ancestry.com/family-tree/person/tree/108791949/person/170071871282/facts
 
 videos:
   - url: https://www.youtube-nocookie.com/embed/1vmOhLFFIq8?rel=0
@@ -36,8 +44,8 @@ videos:
 
 documents:
   - title: Story of P.O.W. Experience
-    url: /media/harold-wood-poole/documents/harold-poole-pow-story.pdf
+    url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/harold-poole-pow-story.pdf
   - title: First Letters Home After the War
-    url: /media/harold-wood-poole/documents/harold-poole-first-post-war-letters-home.pdf
+    url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/harold-poole-first-post-war-letters-home.pdf
   - title: "Former U.S. World War II POW'S: A Struggle For Justice"
-    url: /media/harold-wood-poole/documents/former-us-world-war-ii-pows-a-struggle-for-justice.pdf
+    url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/former-us-world-war-ii-pows-a-struggle-for-justice.pdf
