--- a/data/families/harold-wood-poole-and-kathleen-lucile-jowers/harold-wood-poole-and-kathleen-lucile-jowers.yaml
+++ b/data/families/harold-wood-poole-and-kathleen-lucile-jowers/harold-wood-poole-and-kathleen-lucile-jowers.yaml
@@ -1,5 +1,5 @@
 name: Harold Wood Poole and Kathleen Lucile Jowers
-photo_url: /media/harold-wood-poole-and-kathleen-lucile-jowers/photos/main.jpg
+photo_url: /media/harold-wood-poole-and-kathleen-lucile-jowers/photos/harold-kathleen.jpg
 
 people:
   - full_name: Harold Wood Poole
@@ -10,10 +10,6 @@ people:
         url: https://www.familysearch.org/tree/person/details/KWCY-TG2
       - title: ancestry.com
         url: https://www.ancestry.com/family-tree/person/tree/108791949/person/170071871282/facts
-      - title: World War II hero Harold Poole showed us how to live
-        url: https://www.deseretnews.com/article/700016402/World-War-II-hero-Harold-Poole-showed-us-how-to-live.html
-      - title: On Forgiveness and Apology
-        url: http://www.us-japandialogueonpows.org/On%20Forgiveness%20and%20Apology.htm
       - title: Mormon Stories Interview with Author of Soldier Slaves
         url: https://www.mormonstories.org/podcast/mormon-stories-033-034-and-035-soldier-slaves/
       - title: "Still smiling: Widower and former World War II POW stays optimistic at age 90"
@@ -26,6 +22,7 @@ people:
         url: https://smile.amazon.com/The-Inheritance-Of-War-DVD/dp/B006OIHPRI?sa-no-redirect=1
       - title: Link to buy Soldier Slaves on Amazon
         url: https://smile.amazon.com/Soldier-Slaves-Abandoned-Courts-Congress/dp/1591142040/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1527543918&sr=1-1
+
   - full_name: Kathleen Lucile Jowers
     birth_date: 26 July 1927
     death_date: 11 May 1978
@@ -47,3 +44,7 @@ documents:
     url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/harold-poole-first-post-war-letters-home.pdf
   - title: "Former U.S. World War II POW'S: A Struggle For Justice"
     url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/former-us-world-war-ii-pows-a-struggle-for-justice.pdf
+  - title: On Forgiveness and Apology
+    url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/on-forgiveness-and-apology.pdf
+  - title: WW2 hero Harold Poole showed us how to Live
+    url: /media/harold-wood-poole-and-kathleen-lucile-jowers/documents/ww2-hero-harold-poole-showed-us-how-to-live.pdf
