--- a/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
+++ b/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
@@ -10,6 +10,7 @@ people:
         url: https://www.familysearch.org/tree/person/details/KWCF-B79
       - title: ancestry.com
         url: https://www.ancestry.com/family-tree/person/tree/108791949/person/170071871239/facts
+
   - full_name: Kate Vivian Poole
     birth_date: 4 April 1921
     death_date: 4 March 2006
@@ -20,6 +21,8 @@ people:
         url: https://www.ancestry.com/family-tree/person/tree/108791949/person/170071871240/facts
 
 audio:
+  - title: Childhood Memories
+    url: /media/sylvester-glenn-smith-and-kate-vivian-poole/audio/childhood-memories.mp3
   - title: Courtship & Marriage
     url: /media/sylvester-glenn-smith-and-kate-vivian-poole/audio/courtship-and-marriage.mp3
   - title: Deer Hunting Stories
@@ -42,7 +45,7 @@ photos:
 
 documents:
   - title: Elijah Program
-    description: Glenn and Vivian met while taking part in this program.
+    description: Glenn and Vivian met while partcipating in this program.
     url: /media/sylvester-glenn-smith-and-kate-vivian-poole/documents/elijah-program.pdf
   - title: Glenn 2003 reading list
     url: /media/sylvester-glenn-smith-and-kate-vivian-poole/documents/reading-list-2003.pdf
