--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,4 +14,4 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           push: true
-          tags: ghcr.io/bradym/familycodex/site:latest
+          tags: ghcr.io/bradym/familycodex:latest
