add addional tag for docker image

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -21,4 +21,6 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           push: true
-          tags: ghcr.io/bradym/familycodex:latest
+          tags: |
+            ghcr.io/bradym/familycodex:latest
+            ghcr.io/bradym/familycodex:${{ github.sha }}
