high school audio not ready to publish

--- a/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
+++ b/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
@@ -30,8 +30,8 @@ audio:
   - title: Deer Hunting Stories
     url: /media/sylvester-glenn-smith-and-kate-vivian-poole/audio/deer-hunting-stories.mp3
 
-  - title: High School
-    url: /media/sylvester-glenn-smith-and-kate-vivian-poole/audio/high-school.mp3
+  # - title: High School
+  #   url: /media/sylvester-glenn-smith-and-kate-vivian-poole/audio/high-school.mp3
 
   - title: Lehi and Sandy
     url: /media/sylvester-glenn-smith-and-kate-vivian-poole/audio/lehi-sandy.mp3
