added more media

--- a/data/families/harold-wood-poole-and-kathleen-lucile-jowers/harold-wood-poole-and-kathleen-lucile-jowers.yaml
+++ b/data/families/harold-wood-poole-and-kathleen-lucile-jowers/harold-wood-poole-and-kathleen-lucile-jowers.yaml
@@ -43,6 +43,7 @@ videos:
   - url: https://www.youtube-nocookie.com/embed/1vmOhLFFIq8?rel=0
   - url: https://www.youtube-nocookie.com/embed/Cx6mYBG8mbI?rel=0
   - url: https://www.youtube-nocookie.com/embed/O84m4j4ZA48?rel=0
+  - url: https://www.youtube-nocookie.com/embed/FutwRGEQonM?rel=0
 
 documents:
   - title: Story of P.O.W. Experience
