--- a/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
+++ b/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
@@ -71,6 +71,9 @@ documents:
   - title: Glenn 2007 reading list
     url: /media/sylvester-glenn-smith-and-kate-vivian-poole/documents/reading-list-2007.pdf
 
+  - title: Vacation story
+    url: /media/sylvester-glenn-smith-and-kate-vivian-poole/documents/vacation.pdf
+
 videos:
   - url: https://youtu.be/uKTTnWLId5o
     title: S Glenn Smith Funeral Slideshow
