add some pictures

--- a/data/families/stanley-scottorn-poole-and-peninah-chase-wood/stanley-scottorn-poole-and-peninah-chase-wood.yaml
+++ b/data/families/stanley-scottorn-poole-and-peninah-chase-wood/stanley-scottorn-poole-and-peninah-chase-wood.yaml
@@ -39,3 +39,8 @@ documents:
 
   - title: Life Sketch of Peninah Chase Wood Poole
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/life-sketch-of-peninah-chase-wood-poole.pdf
+
+photos:
+  - url: stanley-scottorn-poole-and-peninah-chase-wood/photos/couple.jpg
+  - url: stanley-scottorn-poole-and-peninah-chase-wood/photos/family.jpg
+  - url: stanley-scottorn-poole-and-peninah-chase-wood/photos/family2.jpg
