--- a/data/families/stanley-scottorn-poole-and-peninah-chase-wood/stanley-scottorn-poole-and-peninah-chase-wood.yaml
+++ b/data/families/stanley-scottorn-poole-and-peninah-chase-wood/stanley-scottorn-poole-and-peninah-chase-wood.yaml
@@ -40,6 +40,78 @@ documents:
   - title: Life Sketch of Peninah Chase Wood Poole
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/life-sketch-of-peninah-chase-wood-poole.pdf
 
+  - title: Dec 12, 1925 - Christmas card
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/Christmas-card-1925-12-12.pdf
+
+  - title: Christmas 1930 Church thank
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/Christmas-1930-Church-thank-you.pdf
+
+  - title: "Letter: May 16, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-05-16.pdf
+
+  - title: "Letter: May 29, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-05-29.pdf
+
+  - title: "Letter: June 1, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-06-01.pdf
+
+  - title: "Letter: June 5, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-06-05.pdf
+
+  - title: "Letter: June 11, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-06-11.pdf
+
+  - title: "Letter: June 18, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-06-18.pdf
+
+  - title: "Letter: July 11, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-11.pdf
+
+  - title: "Letter: July 15, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-15.pdf
+
+  - title: "Letter: July 25, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-25.pdf
+
+  - title: "Letter: Aug 22, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-08-22.pdf
+
+  - title: "Letter: Nov 12, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-11-12.pdf
+
+  - title: "Letter: Nov 19, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-11-19.pdf
+
+  - title: "Letter: June 13, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-06-13.pdf
+
+  - title: "Letter: June 14, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-06-14.pdf
+
+  - title: "Letter: June 15, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-06-15.pdf
+
+  - title: "Letter: June 24, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-06-24.pdf
+
+  - title: "Letter: June 27, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-06-27.pdf
+
+  - title: "Letter: July 2, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-07-02.pdf
+
+  - title: "Letter: July 5, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-07-05.pdf
+
+  - title: "Letter: July 8, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-07-08.pdf
+
+  - title: "Letter: July 13, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-07-13.pdf
+
+  - title: "Letter: July 18, 1935"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-07-18.pdf
+
 photos:
   - url: stanley-scottorn-poole-and-peninah-chase-wood/photos/couple.jpg
   - url: stanley-scottorn-poole-and-peninah-chase-wood/photos/family.jpg
