--- a/data/families/stanley-scottorn-poole-and-peninah-chase-wood/stanley-scottorn-poole-and-peninah-chase-wood.yaml
+++ b/data/families/stanley-scottorn-poole-and-peninah-chase-wood/stanley-scottorn-poole-and-peninah-chase-wood.yaml
@@ -23,6 +23,7 @@ people:
 videos:
   - url: https://www.youtube-nocookie.com/embed/yWQViQwyfQc?rel=0
   - url: https://www.youtube-nocookie.com/embed/OvrPVpNE1PM?rel=0
+  - url: https://www.youtube-nocookie.com/embed/WqmBPmKgDy0?rel=0
 
 audio:
   - title: Mormon Tabernacle Choir of Salt Lake City
@@ -43,7 +44,7 @@ documents:
   - title: Dec 12, 1925 - Christmas card
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/Christmas-card-1925-12-12.pdf
 
-  - title: Christmas 1930 Church thank
+  - title: Christmas 1930 Church thank you
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/Christmas-1930-Church-thank-you.pdf
 
   - title: "Letter: May 16, 1915"
@@ -67,8 +68,8 @@ documents:
   - title: "Letter: July 11, 1915"
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-11.pdf
 
-  - title: "Letter: July 15, 1915"
-    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-15.pdf
+  - title: "Letter: July 16, 1915"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-16.pdf
 
   - title: "Letter: July 25, 1915"
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-07-25.pdf
@@ -76,11 +77,83 @@ documents:
   - title: "Letter: Aug 22, 1915"
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1915-08-22.pdf
 
+  - title: "Letter: April 16, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-04-16.pdf
+
+  - title: "Letter: April 30, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-04-30.pdf
+
+  - title: "Letter: May 14, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-05-14.pdf
+
+  - title: "Letter: May 28, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-05-28.pdf
+
+  - title: "Letter: June 12, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-06-12.pdf
+
+  - title: "Letter: June 22, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-06-22.pdf
+
+  - title: "Letter: July 1, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-07-01.pdf
+
+  - title: "Letter: July 8, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-07-08.pdf
+
+  - title: "Letter: July 15, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-07-15.pdf
+
+  - title: "Letter: July 16, 1916"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-07-16.pdf
+
   - title: "Letter: Nov 12, 1916"
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-11-12.pdf
 
   - title: "Letter: Nov 19, 1916"
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-11-19.pdf
+
+  - title: "Letter: August 13, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-08-13.pdf
+
+  - title: "Letter: August 20, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-08-20.pdf
+
+  - title: "Letter: October 13, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-10-13.pdf
+
+  - title: "Letter: October 23, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-10-23.pdf
+
+  - title: "Letter: November 27, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-11-27.pdf
+
+  - title: "Letter: December 7, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1916-12-07.pdf
+
+  - title: "Letter: April 12, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-04-12.pdf
+
+  - title: "Letter: April 23, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-04-23.pdf
+
+  - title: "Letter: May 18, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-05-18.pdf
+
+  - title: "Letter: May 27, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-05-27.pdf
+
+  - title: "Letter: June 17, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-06-17.pdf
+
+  - title: "Letter: July 3, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-07-03.pdf
+
+  - title: "Letter: August 25, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-08-25.pdf
+
+  - title: "Letter: November 24, 1917"
+    url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1917-11-24.pdf
 
   - title: "Letter: June 13, 1935"
     url: stanley-scottorn-poole-and-peninah-chase-wood/documents/letters/1935-06-13.pdf
