add letters and christmas card

--- a/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
+++ b/data/families/sylvester-glenn-smith-and-kate-vivian-poole/sylvester-glenn-smith-and-kate-vivian-poole.yaml
@@ -74,6 +74,15 @@ documents:
   - title: Vacation story
     url: sylvester-glenn-smith-and-kate-vivian-poole/documents/vacation.pdf
 
+  - title: "Vivian Mission letter from Joseph Cotton Wood: 1941-11-20"
+    url: sylvester-glenn-smith-and-kate-vivian-poole/documents/1941-11-20.pdf
+
+  - title: "Vivian Mission letter from Peninah Chase Wood: 1941-12-26"
+    url: sylvester-glenn-smith-and-kate-vivian-poole/documents/1941-12-26.pdf
+
+  - title: Christmas card from Vivian to Glenn
+    url: sylvester-glenn-smith-and-kate-vivian-poole/documents/christmas-card-from-Vivian-to-Glenn.pdf
+
 videos:
   - url: https://youtu.be/uKTTnWLId5o
     title: S Glenn Smith Funeral Slideshow
