remove broken video link, remove smile.amazon links

--- a/data/families/harold-wood-poole-and-kathleen-lucile-jowers/harold-wood-poole-and-kathleen-lucile-jowers.yaml
+++ b/data/families/harold-wood-poole-and-kathleen-lucile-jowers/harold-wood-poole-and-kathleen-lucile-jowers.yaml
@@ -25,10 +25,10 @@ people:
         url: https://www.c-span.org/video/?193389-1/soldier-slaves
 
       - title: Link to buy The Inheritance Of War DVD on Amazon
-        url: https://smile.amazon.com/The-Inheritance-Of-War-DVD/dp/B006OIHPRI?sa-no-redirect=1
+        url: https://www.amazon.com/The-Inheritance-Of-War-DVD/dp/B006OIHPRI?sa-no-redirect=1
 
       - title: Link to buy Soldier Slaves on Amazon
-        url: https://smile.amazon.com/Soldier-Slaves-Abandoned-Courts-Congress/dp/1591142040/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1527543918&sr=1-1
+        url: https://www.amazon.com/Soldier-Slaves-Abandoned-Courts-Congress/dp/1591142040/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1527543918&sr=1-1
 
   - full_name: Kathleen Lucile Jowers
     birth_date: 26 July 1927
@@ -42,7 +42,6 @@ people:
 videos:
   - url: https://www.youtube-nocookie.com/embed/1vmOhLFFIq8?rel=0
   - url: https://www.youtube-nocookie.com/embed/Cx6mYBG8mbI?rel=0
-  - url: https://www.youtube-nocookie.com/embed/O84m4j4ZA48?rel=0
   - url: https://www.youtube-nocookie.com/embed/FutwRGEQonM?rel=0
 
 documents:
