--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,12 @@
 #
 #    pip-compile --annotation-style=line --output-file=requirements.txt requirements.in
 #
-htmlmin==0.1.12
-    # via -r requirements.in
-jinja2==3.1.2
-    # via -r requirements.in
-livereload==2.6.3
-    # via -r requirements.in
-markdown==3.4.1
-    # via -r requirements.in
-markupsafe==2.1.1
-    # via jinja2
-pyyaml==6.0.2
-    # via -r requirements.in
-six==1.16.0
-    # via livereload
-tornado==6.4.2
-    # via livereload
-watchdog==2.2.0
-    # via -r requirements.in
+htmlmin==0.1.12           # via -r requirements.in
+jinja2==3.1.6             # via -r requirements.in
+livereload==2.6.3         # via -r requirements.in
+markdown==3.4.3           # via -r requirements.in
+markupsafe==2.1.1         # via jinja2
+pyyaml==6.0.2             # via -r requirements.in
+six==1.17.0               # via livereload
+tornado==6.4.2            # via livereload
+watchdog==3.0.0           # via -r requirements.in
