--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,15 @@ jobs:
       - name: Setup python env
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.12
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: uv sync --frozen --no-dev --no-install-project --python 3.12
       - name: Build site
-        run: bin/generate.py
+        run: .venv/bin/python bin/generate.py
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
